--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,8 +58,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - assets/images/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
@@ -76,7 +76,7 @@ flutter:
   fonts:
     - family: SFPro
       fonts:
-        - asset: assets/fonts/SF-Pro-Rounded-Regular
+        - asset: assets/fonts/SF-Pro-Rounded-Regular.ttf
         
   #   - family: Trajan Pro
   #     fonts:
